<resources>
    <string name="app_name">StepsTracker</string>
    <string name="nostepsweek">:( No steps logged for this week !!</string>
    <string name="nostepsmonth">:( No steps logged for this month !!</string>
    <string name="today">TODAY</string>
    <string name="reports">REPORTS</string>
    <string name="settings">SETTINGS</string>
    <string name="kilometers">Kilometers</string>
    <string name="calories">Calories</string>
    <string name="minutes">Minutes</string>
    <string name="gender">Gender</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (Kg)</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="steplength">Step Lenght (cm)</string>
    <string name="pace">Pace (steps/min)</string>
    <string name="sound">Sound</string>
    <string name="futuremessage">Future is yet to be seen !!</string>
    <string name="activitysatarted">Activity Started</string>
    <string name="activitypaused">Activity Paused</string>
    <string name="firstmonth">Your journey began this month</string>
    <string name="firstweek">Your journey began this week</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="stepstodaywidget">Steps Today</string>
    <string name="editheight">Edit Height</string>
    <string name="editweight">Edit Weight</string>
    <string name="editpace">Edit Pace</string>
    <string name="editsteplength">Edit StepLength</string>
    <string name="stepstrackersharedpref">stepstracker</string>
    <string name="isinitialisedsharedpref">isinitialised</string>
    <string name="isplaybuttononsharedpref">isplaybuttonon</string>
    <string name="heightsharedpref">height</string>
    <string name="weightsharedpref">weight</string>
    <string name="sensitivitysharedpref">sensitivity</string>
    <string name="steplengthsharedpref">steplength</string>
    <string name="pacesharedpref">pace</string>
    <string name="stepstodaysharedpref">stepstoday</string>
    <string name="issoundenabled">issoundenabled</string>
    <string name="gendersharedpref">gender</string>
    <string name="stringbanner">BANNER</string>
    <string name="date">date</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="cd_previousweek"> Load data for previous week</string>
    <string name="cd_nextweek">Load data for next week</string>
    <string name="cd_previousmonth">Load data for previous month</string>
    <string name="cd_nextmonth">Load data for next month</string>
    <string name="cd_sound">Enable or diable sound of this app</string>
    <string name="cd_distance">Distance travelled today in kilometers</string>
    <string name="cd_calories">Total calories burnt today</string>
    <string name="cd_time">Total time travelled walking</string>
    <string name="cd_applogo">Logo for steps tracker app</string>
</resources>
