<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_steps">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:elevation="30dp"
        android:layout_height="match_parent"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@drawable/gradient_steps">
<RelativeLayout
    android:id="@+id/rl_top_week"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="5dp">
    <ImageView
        android:id="@+id/iv_previous_week"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:src="@drawable/back"
        android:contentDescription="@string/cd_previousweek"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@+id/tv_week"
        />
    <TextView
        android:id="@+id/tv_week"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        />


    <ImageView
        android:id="@+id/iv_next_week"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:layout_toEndOf="@+id/tv_week"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/cd_nextweek"
        android:src="@drawable/forward"/>


</RelativeLayout>

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_below="@id/rl_top_week">
            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart_week"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView android:id="@+id/tv_noStepsWeek"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/nostepsweek"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:visibility="gone"
                ></TextView>
            <ProgressBar
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:id="@+id/pb_week"
                android:visibility="gone"/>

        </FrameLayout>
   </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_steps">
            <RelativeLayout
                android:id="@+id/rl_top_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp">
                <ImageView
                    android:id="@+id/iv_previous_month"
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:src="@drawable/back"
                    android:layout_marginEnd="30dp"
                    android:contentDescription="@string/cd_previousmonth"
                    android:layout_toStartOf="@+id/tv_month"

                    />
                <TextView
                    android:id="@+id/tv_month"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    />


                <ImageView
                    android:id="@+id/iv_next_month"
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_toEndOf="@+id/tv_month"
                    android:contentDescription="@string/cd_nextmonth"
                    android:src="@drawable/forward"/>


            </RelativeLayout>

            <FrameLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_below="@id/rl_top_month">
                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/chart_month"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView android:id="@+id/tv_noStepsMonth"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/nostepsmonth"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:visibility="gone"
                    ></TextView>
                <ProgressBar
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:id="@+id/pb_month"
                    android:visibility="gone"/>


            </FrameLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>