<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:layout_weight="1.0">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient_steps">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:elevation="10dp"
            android:layout_weight="1"
            android:id="@+id/cv_cardview"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@drawable/gradient_steps"
                >
                <TextView
                    android:id="@+id/tv_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="80sp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circle_shape"
                    android:textColor="@color/colorWhite"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tv_steps"
                    android:layout_marginTop="10dp">
                <jp.co.recruit_lifestyle.android.widget.PlayPauseButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@color/colorPrimary"
                    android:id="@+id/main_play_pause_button"
                    />
                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="4"
            android:id="@+id/cv_summary"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_steps">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_margin="2dp">
                        <ImageView
                            android:id="@+id/iv_kilometers"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentStart="true"
                            android:background="@drawable/distance"
                            android:contentDescription="@string/cd_distance"
                            android:layout_centerVertical="true"
                            />
                        <TextView
                            android:id="@+id/tv_kilometers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:layout_toEndOf="@id/iv_kilometers"
                            android:textColor="@color/colorWhite"
                            android:paddingStart="10dp"
                            android:layout_centerHorizontal="true"/>
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/iv_kilometers"
                            android:layout_below="@id/tv_kilometers"
                            android:text="@string/kilometers"
                            android:textSize="12sp"
                            android:textColor="@color/colorWhite"
                            android:paddingStart="10dp"
                            android:layout_centerHorizontal="true"
                            />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="2dp"
                        android:layout_gravity="center_horizontal">
                        <ImageView
                            android:id="@+id/iv_kcal"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/cd_calories"
                            android:background="@drawable/kcal"
                            />
                        <TextView
                            android:id="@+id/tv_kcal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:layout_toEndOf="@+id/iv_kcal"
                            android:textColor="@color/colorWhite"
                            android:paddingStart="10dp"
                            android:layout_centerHorizontal="true"
                            />
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calories"
                            android:textSize="12sp"
                            android:layout_toEndOf="@+id/iv_kcal"
                            android:layout_below="@+id/tv_kcal"
                            android:paddingStart="10dp"
                            android:textColor="@color/colorWhite"
                            android:layout_centerHorizontal="true"
                            />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="2dp"
                        android:layout_gravity="center_horizontal">
                        <ImageView
                            android:id="@+id/iv_time"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/time"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/cd_time"
                            android:layout_alignParentStart="true"
                            />
                        <TextView
                            android:id="@+id/tv_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:layout_toEndOf="@+id/iv_time"
                            android:textColor="@color/colorWhite"
                            android:paddingStart="10dp"
                            android:layout_centerHorizontal="true"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minutes"
                            android:textSize="12sp"
                            android:layout_toEndOf="@+id/iv_time"
                            android:layout_below="@+id/tv_time"
                            android:textColor="@color/colorWhite"
                            android:paddingStart="10dp"
                            android:layout_centerHorizontal="true"
                            />

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>